--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,6 @@
-sonar.organization=brendanh1
 sonar.projectKey=brendanh1_blog-api
-sonar.projectName=Blog API
-
+sonar.organization=brendanh1
 sonar.sources=src
 sonar.tests=tests
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.sourceEncoding=UTF-8
+sonar.login=${SONAR_TOKEN}
