--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-  "start": "node src/server.js",
-  "dev": "nodemon src/server.js",
-  "test": "jest --coverage"
+  "test": "npm run test:unit && npm run test:integration",
+  "test:unit": "jest tests/unit",
+  "test:integration": "jest tests/integration"
 },
   "keywords": [],
   "author": "",
