--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "tests"
   },
   "scripts": {
+  "start": "node server.js",
   "test": "npm run test:unit && npm run test:integration",
   "test:unit": "jest tests/unit",
   "test:integration": "jest tests/integration"
